--- a/itoncallinc-app-vite/src/input.css
+++ b/itoncallinc-app-vite/src/input.css
@@ -1,12 +1,4 @@
-@tailwind base;
-@tailwind components;
 @tailwind utilities;
-
-@layer base {
-  h1 {
-    @apply md:text-sm lg:text-lg xl:text-lg;
-  }
-  h2 {
-    @apply md:text-sm lg:text-lg xl:text-lg;
-  }
-}
+@tailwind variants;
+@tailwind components;
+@tailwind base;
